<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="GVL_Dome" Id="{86115280-b596-42d6-92cd-0d7bfc111d95}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// enable flap hydraulics
	Flap_enable		AT%Q*:	BOOL;
	// open the flap, when true; close when false
	Flap_open		AT%Q*:	BOOL;
	// enable the slit motor
	Slit_enable		AT%Q*:	BOOL;
	// open the slit when true; close when false
	slit_open		AT%Q*:	BOOL;
	// Input signal 7 (0...7)
	Input7		AT%I*: BOOL;

	// ADS remote control word
	StatusWord		AT%MW0: WORD;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>